# RenderGraph

./: .clang-format  .gitignore  CMakeLists.txt  README.md  compile.py
include/: Allocator.ixx  Buffer.ixx  Command.ixx  CommandPool.ixx  DescriptorBuffer.ixx  DescriptorPool.ixx  DescriptorSet.ixx  Device.ixx  Graph.ixx  Instance.ixx  Pipeline.ixx  Shader.ixx  Surface.ixx  Swapchain.ixx  Sync.ixx  Texture.ixx  Timestamps.ixx  Window.ixx
resources/: fragment.spv  vertex.spv
src/: Allocator.cpp  Buffer.cpp  Command.cpp  CommandPool.cpp  DescriptorBuffer.cpp  DescriptorPool.cpp  DescriptorSet.cpp  Device.cpp  Graph.cpp  Instance.cpp  Pipeline.cpp  Shader.cpp  Surface.cpp  Swapchain.cpp  Sync.cpp  Texture.cpp  Timestamps.cpp  Window.cpp
tests/: Initialization.cpp  Scenarios.cpp
